--- a/HitAndBlow/HitAndBlow.csproj
+++ b/HitAndBlow/HitAndBlow.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HitAndBlow.cs" />
+    <Compile Include="HitBlowSet.cs" />
+    <Compile Include="Number.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SetOfSuite.cs" />
