クラスを追加

--- a/HitAndBlow/HitAndBlow.csproj
+++ b/HitAndBlow/HitAndBlow.csproj
@@ -46,6 +46,7 @@
     <Compile Include="HitAndBlow.cs" />
     <Compile Include="HitBlowSet.cs" />
     <Compile Include="Number.cs" />
+    <Compile Include="Numbers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SetOfSuite.cs" />
