期待値計算処理追加

--- a/HitAndBlow/HitAndBlow.csproj
+++ b/HitAndBlow/HitAndBlow.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExpectedValue.cs" />
+    <Compile Include="ExpectedValueCalculator.cs" />
     <Compile Include="HitAndBlow.cs" />
     <Compile Include="HitBlowSet.cs" />
     <Compile Include="Number.cs" />
